--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "knex": "tsx ./node_modules/knex/bin/cli.js",
     "dev": "tsx watch src/server.ts"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.17",
     "eslint": "^8.57.1",
     "tsc": "^2.0.4",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "fastify": "^5.3.2"
+    "fastify": "^5.3.2",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7",
+    "ts-node": "^10.9.2"
   }
 }
