--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fastify": "^5.3.2",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^3.24.4"
   }
 }
