--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
   "main": "index.js",
   "scripts": {
     "knex": "tsx ./node_modules/knex/bin/cli.js",
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "test": "vitest"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.15.17",
+    "@types/supertest": "^6.0.3",
     "eslint": "^8.57.1",
+    "supertest": "^7.1.1",
     "tsc": "^2.0.4",
     "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.4"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
